ingress-cert-manager/cert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel
